# serializer version: 1
# name: test_nulls[session-tracked-ASC_NULLS_FIRST-async-asyncpg_engine]
  '''
  SELECT sql_data_types.optional_str_col,
         sql_data_types.id
    FROM sql_data_types AS sql_data_types
   ORDER BY sql_data_types.optional_str_col ASC NULLS FIRST
  '''
# ---
# name: test_nulls[session-tracked-ASC_NULLS_FIRST-async-psycopg_async_engine]
  '''
  SELECT sql_data_types.optional_str_col,
         sql_data_types.id
    FROM sql_data_types AS sql_data_types
   ORDER BY sql_data_types.optional_str_col ASC NULLS FIRST
  '''
# ---
# name: test_nulls[session-tracked-ASC_NULLS_FIRST-sync-psycopg_engine]
  '''
  SELECT sql_data_types.optional_str_col,
         sql_data_types.id
    FROM sql_data_types AS sql_data_types
   ORDER BY sql_data_types.optional_str_col ASC NULLS FIRST
  '''
# ---
# name: test_nulls[session-tracked-ASC_NULLS_LAST-async-asyncpg_engine]
  '''
  SELECT sql_data_types.optional_str_col,
         sql_data_types.id
    FROM sql_data_types AS sql_data_types
   ORDER BY sql_data_types.optional_str_col ASC NULLS LAST
  '''
# ---
# name: test_nulls[session-tracked-ASC_NULLS_LAST-async-psycopg_async_engine]
  '''
  SELECT sql_data_types.optional_str_col,
         sql_data_types.id
    FROM sql_data_types AS sql_data_types
   ORDER BY sql_data_types.optional_str_col ASC NULLS LAST
  '''
# ---
# name: test_nulls[session-tracked-ASC_NULLS_LAST-sync-psycopg_engine]
  '''
  SELECT sql_data_types.optional_str_col,
         sql_data_types.id
    FROM sql_data_types AS sql_data_types
   ORDER BY sql_data_types.optional_str_col ASC NULLS LAST
  '''
# ---
# name: test_nulls[session-tracked-DESC_NULLS_FIRST-async-asyncpg_engine]
  '''
  SELECT sql_data_types.optional_str_col,
         sql_data_types.id
    FROM sql_data_types AS sql_data_types
   ORDER BY sql_data_types.optional_str_col DESC NULLS FIRST
  '''
# ---
# name: test_nulls[session-tracked-DESC_NULLS_FIRST-async-psycopg_async_engine]
  '''
  SELECT sql_data_types.optional_str_col,
         sql_data_types.id
    FROM sql_data_types AS sql_data_types
   ORDER BY sql_data_types.optional_str_col DESC NULLS FIRST
  '''
# ---
# name: test_nulls[session-tracked-DESC_NULLS_FIRST-sync-psycopg_engine]
  '''
  SELECT sql_data_types.optional_str_col,
         sql_data_types.id
    FROM sql_data_types AS sql_data_types
   ORDER BY sql_data_types.optional_str_col DESC NULLS FIRST
  '''
# ---
# name: test_nulls[session-tracked-DESC_NULLS_LAST-async-asyncpg_engine]
  '''
  SELECT sql_data_types.optional_str_col,
         sql_data_types.id
    FROM sql_data_types AS sql_data_types
   ORDER BY sql_data_types.optional_str_col DESC NULLS LAST
  '''
# ---
# name: test_nulls[session-tracked-DESC_NULLS_LAST-async-psycopg_async_engine]
  '''
  SELECT sql_data_types.optional_str_col,
         sql_data_types.id
    FROM sql_data_types AS sql_data_types
   ORDER BY sql_data_types.optional_str_col DESC NULLS LAST
  '''
# ---
# name: test_nulls[session-tracked-DESC_NULLS_LAST-sync-psycopg_engine]
  '''
  SELECT sql_data_types.optional_str_col,
         sql_data_types.id
    FROM sql_data_types AS sql_data_types
   ORDER BY sql_data_types.optional_str_col DESC NULLS LAST
  '''
# ---
# name: test_order_by[session-tracked-ASC-async-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.name ASC
  '''
# ---
# name: test_order_by[session-tracked-ASC-async-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.name ASC
  '''
# ---
# name: test_order_by[session-tracked-ASC-sync-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.name ASC
  '''
# ---
# name: test_order_by[session-tracked-DESC-async-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.name DESC
  '''
# ---
# name: test_order_by[session-tracked-DESC-async-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.name DESC
  '''
# ---
# name: test_order_by[session-tracked-DESC-sync-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.name DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-avg-async-asyncpg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT avg(sql_data_types_1.int_col) AS avg_data_types__avg_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."avg_data_types__avg_int_col" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-avg-async-psycopg_async_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT avg(sql_data_types_1.int_col) AS avg_data_types__avg_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."avg_data_types__avg_int_col" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-avg-sync-psycopg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT avg(sql_data_types_1.int_col) AS avg_data_types__avg_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."avg_data_types__avg_int_col" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-max-async-asyncpg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT max(sql_data_types_1.int_col) AS max_data_types__max_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."max_data_types__max_int_col" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-max-async-psycopg_async_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT max(sql_data_types_1.int_col) AS max_data_types__max_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."max_data_types__max_int_col" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-max-sync-psycopg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT max(sql_data_types_1.int_col) AS max_data_types__max_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."max_data_types__max_int_col" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-min-async-asyncpg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT min(sql_data_types_1.int_col) AS min_data_types__min_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."min_data_types__min_int_col" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-min-async-psycopg_async_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT min(sql_data_types_1.int_col) AS min_data_types__min_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."min_data_types__min_int_col" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-min-sync-psycopg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT min(sql_data_types_1.int_col) AS min_data_types__min_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."min_data_types__min_int_col" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-stddev-async-asyncpg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT stddev(sql_data_types_1.int_col) AS stddev_data_types__stddev_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."stddev_data_types__stddev_int_col" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-stddev-async-psycopg_async_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT stddev(sql_data_types_1.int_col) AS stddev_data_types__stddev_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."stddev_data_types__stddev_int_col" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-stddev-sync-psycopg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT stddev(sql_data_types_1.int_col) AS stddev_data_types__stddev_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."stddev_data_types__stddev_int_col" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-stddevPop-async-asyncpg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT stddev_pop(sql_data_types_1.int_col) AS stddev_pop_data_types__stddev_pop_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."stddev_pop_data_types__stddev_pop_int_col" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-stddevPop-async-psycopg_async_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT stddev_pop(sql_data_types_1.int_col) AS stddev_pop_data_types__stddev_pop_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."stddev_pop_data_types__stddev_pop_int_col" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-stddevPop-sync-psycopg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT stddev_pop(sql_data_types_1.int_col) AS stddev_pop_data_types__stddev_pop_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."stddev_pop_data_types__stddev_pop_int_col" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-stddevSamp-async-asyncpg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT stddev_samp(sql_data_types_1.int_col) AS stddev_samp_data_types__stddev_samp_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."stddev_samp_data_types__stddev_samp_int_col" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-stddevSamp-async-psycopg_async_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT stddev_samp(sql_data_types_1.int_col) AS stddev_samp_data_types__stddev_samp_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."stddev_samp_data_types__stddev_samp_int_col" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-stddevSamp-sync-psycopg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT stddev_samp(sql_data_types_1.int_col) AS stddev_samp_data_types__stddev_samp_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."stddev_samp_data_types__stddev_samp_int_col" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-sum-async-asyncpg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT sum(sql_data_types_1.int_col) AS sum_data_types__sum_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."sum_data_types__sum_int_col" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-sum-async-psycopg_async_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT sum(sql_data_types_1.int_col) AS sum_data_types__sum_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."sum_data_types__sum_int_col" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-sum-sync-psycopg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT sum(sql_data_types_1.int_col) AS sum_data_types__sum_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."sum_data_types__sum_int_col" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-varPop-async-asyncpg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT var_pop(sql_data_types_1.int_col) AS var_pop_data_types__var_pop_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."var_pop_data_types__var_pop_int_col" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-varPop-async-psycopg_async_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT var_pop(sql_data_types_1.int_col) AS var_pop_data_types__var_pop_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."var_pop_data_types__var_pop_int_col" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-varPop-sync-psycopg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT var_pop(sql_data_types_1.int_col) AS var_pop_data_types__var_pop_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."var_pop_data_types__var_pop_int_col" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-varSamp-async-asyncpg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT var_samp(sql_data_types_1.int_col) AS var_samp_data_types__var_samp_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."var_samp_data_types__var_samp_int_col" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-varSamp-async-psycopg_async_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT var_samp(sql_data_types_1.int_col) AS var_samp_data_types__var_samp_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."var_samp_data_types__var_samp_int_col" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-varSamp-sync-psycopg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT var_samp(sql_data_types_1.int_col) AS var_samp_data_types__var_samp_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."var_samp_data_types__var_samp_int_col" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-variance-async-asyncpg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT variance(sql_data_types_1.int_col) AS variance_data_types__variance_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."variance_data_types__variance_int_col" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-variance-async-psycopg_async_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT variance(sql_data_types_1.int_col) AS variance_data_types__variance_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."variance_data_types__variance_int_col" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-ASC-variance-sync-psycopg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT variance(sql_data_types_1.int_col) AS variance_data_types__variance_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."variance_data_types__variance_int_col" ASC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-avg-async-asyncpg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT avg(sql_data_types_1.int_col) AS avg_data_types__avg_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."avg_data_types__avg_int_col" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-avg-async-psycopg_async_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT avg(sql_data_types_1.int_col) AS avg_data_types__avg_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."avg_data_types__avg_int_col" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-avg-sync-psycopg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT avg(sql_data_types_1.int_col) AS avg_data_types__avg_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."avg_data_types__avg_int_col" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-max-async-asyncpg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT max(sql_data_types_1.int_col) AS max_data_types__max_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."max_data_types__max_int_col" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-max-async-psycopg_async_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT max(sql_data_types_1.int_col) AS max_data_types__max_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."max_data_types__max_int_col" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-max-sync-psycopg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT max(sql_data_types_1.int_col) AS max_data_types__max_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."max_data_types__max_int_col" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-min-async-asyncpg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT min(sql_data_types_1.int_col) AS min_data_types__min_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."min_data_types__min_int_col" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-min-async-psycopg_async_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT min(sql_data_types_1.int_col) AS min_data_types__min_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."min_data_types__min_int_col" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-min-sync-psycopg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT min(sql_data_types_1.int_col) AS min_data_types__min_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."min_data_types__min_int_col" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-stddev-async-asyncpg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT stddev(sql_data_types_1.int_col) AS stddev_data_types__stddev_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."stddev_data_types__stddev_int_col" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-stddev-async-psycopg_async_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT stddev(sql_data_types_1.int_col) AS stddev_data_types__stddev_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."stddev_data_types__stddev_int_col" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-stddev-sync-psycopg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT stddev(sql_data_types_1.int_col) AS stddev_data_types__stddev_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."stddev_data_types__stddev_int_col" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-stddevPop-async-asyncpg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT stddev_pop(sql_data_types_1.int_col) AS stddev_pop_data_types__stddev_pop_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."stddev_pop_data_types__stddev_pop_int_col" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-stddevPop-async-psycopg_async_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT stddev_pop(sql_data_types_1.int_col) AS stddev_pop_data_types__stddev_pop_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."stddev_pop_data_types__stddev_pop_int_col" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-stddevPop-sync-psycopg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT stddev_pop(sql_data_types_1.int_col) AS stddev_pop_data_types__stddev_pop_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."stddev_pop_data_types__stddev_pop_int_col" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-stddevSamp-async-asyncpg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT stddev_samp(sql_data_types_1.int_col) AS stddev_samp_data_types__stddev_samp_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."stddev_samp_data_types__stddev_samp_int_col" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-stddevSamp-async-psycopg_async_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT stddev_samp(sql_data_types_1.int_col) AS stddev_samp_data_types__stddev_samp_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."stddev_samp_data_types__stddev_samp_int_col" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-stddevSamp-sync-psycopg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT stddev_samp(sql_data_types_1.int_col) AS stddev_samp_data_types__stddev_samp_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."stddev_samp_data_types__stddev_samp_int_col" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-sum-async-asyncpg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT sum(sql_data_types_1.int_col) AS sum_data_types__sum_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."sum_data_types__sum_int_col" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-sum-async-psycopg_async_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT sum(sql_data_types_1.int_col) AS sum_data_types__sum_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."sum_data_types__sum_int_col" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-sum-sync-psycopg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT sum(sql_data_types_1.int_col) AS sum_data_types__sum_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."sum_data_types__sum_int_col" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-varPop-async-asyncpg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT var_pop(sql_data_types_1.int_col) AS var_pop_data_types__var_pop_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."var_pop_data_types__var_pop_int_col" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-varPop-async-psycopg_async_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT var_pop(sql_data_types_1.int_col) AS var_pop_data_types__var_pop_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."var_pop_data_types__var_pop_int_col" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-varPop-sync-psycopg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT var_pop(sql_data_types_1.int_col) AS var_pop_data_types__var_pop_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."var_pop_data_types__var_pop_int_col" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-varSamp-async-asyncpg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT var_samp(sql_data_types_1.int_col) AS var_samp_data_types__var_samp_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."var_samp_data_types__var_samp_int_col" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-varSamp-async-psycopg_async_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT var_samp(sql_data_types_1.int_col) AS var_samp_data_types__var_samp_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."var_samp_data_types__var_samp_int_col" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-varSamp-sync-psycopg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT var_samp(sql_data_types_1.int_col) AS var_samp_data_types__var_samp_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."var_samp_data_types__var_samp_int_col" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-variance-async-asyncpg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT variance(sql_data_types_1.int_col) AS variance_data_types__variance_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."variance_data_types__variance_int_col" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-variance-async-psycopg_async_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT variance(sql_data_types_1.int_col) AS variance_data_types__variance_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."variance_data_types__variance_int_col" DESC
  '''
# ---
# name: test_order_by_aggregations[session-tracked-DESC-variance-sync-psycopg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN LATERAL (
          SELECT variance(sql_data_types_1.int_col) AS variance_data_types__variance_int_col
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
         ) AS aggregation_0
      ON TRUE
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   ORDER BY aggregation_0."variance_data_types__variance_int_col" DESC
  '''
# ---
# name: test_relation_order_by[session-tracked-ASC-async-asyncpg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    LEFT OUTER JOIN LATERAL (
          SELECT sql_data_types_1.int_col AS int_col,
                 sql_data_types_1.id AS id
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
           ORDER BY sql_data_types_1.int_col ASC
         ) AS sql_data_types_container__data_types
      ON TRUE
  '''
# ---
# name: test_relation_order_by[session-tracked-ASC-async-psycopg_async_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    LEFT OUTER JOIN LATERAL (
          SELECT sql_data_types_1.int_col AS int_col,
                 sql_data_types_1.id AS id
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
           ORDER BY sql_data_types_1.int_col ASC
         ) AS sql_data_types_container__data_types
      ON TRUE
  '''
# ---
# name: test_relation_order_by[session-tracked-ASC-sync-psycopg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    LEFT OUTER JOIN LATERAL (
          SELECT sql_data_types_1.int_col AS int_col,
                 sql_data_types_1.id AS id
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
           ORDER BY sql_data_types_1.int_col ASC
         ) AS sql_data_types_container__data_types
      ON TRUE
  '''
# ---
# name: test_relation_order_by[session-tracked-DESC-async-asyncpg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    LEFT OUTER JOIN LATERAL (
          SELECT sql_data_types_1.int_col AS int_col,
                 sql_data_types_1.id AS id
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
           ORDER BY sql_data_types_1.int_col DESC
         ) AS sql_data_types_container__data_types
      ON TRUE
  '''
# ---
# name: test_relation_order_by[session-tracked-DESC-async-psycopg_async_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    LEFT OUTER JOIN LATERAL (
          SELECT sql_data_types_1.int_col AS int_col,
                 sql_data_types_1.id AS id
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
           ORDER BY sql_data_types_1.int_col DESC
         ) AS sql_data_types_container__data_types
      ON TRUE
  '''
# ---
# name: test_relation_order_by[session-tracked-DESC-sync-psycopg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    LEFT OUTER JOIN LATERAL (
          SELECT sql_data_types_1.int_col AS int_col,
                 sql_data_types_1.id AS id
            FROM sql_data_types AS sql_data_types_1
           WHERE sql_data_types_container.id = sql_data_types_1.container_id
           ORDER BY sql_data_types_1.int_col DESC
         ) AS sql_data_types_container__data_types
      ON TRUE
  '''
# ---
